# community_search

./: .gitmodules  requirements.txt
scripts/: array.py  array.sbatch.sh  normalize_edgelist.py  randomid.py
scripts/02-01/: array.txt  array1.txt
scripts/02-07/: array1.txt  array2.txt  array3.txt  array4.txt  gendata.py  random_query50.py
scripts/02-08/: array1.txt  array2.txt  array3.txt  array4.txt  genscripts.py  networks.txt  summarize.py  timing.py
scripts/ae3b517/: kcore.py  kcore1.py
src/csk/: README.md  pyproject.toml
src/csk/cpp/: graph.h  graph_IO.h  main.cpp  truss.h
src/csk/examples/ex_baseline/: query.txt  run.sh
src/csk/examples/ex_shell_baseline/: query.txt  run.sh
src/csk/examples/ex_shell_compressed/: run.sh
src/csk/examples/ex_steiner/: run.sh
src/csk/py/: auf.py  kcore_multi.py  kcore_shellstruct.py  rmq.py  run_shellstruct.py  shell.py  shell_bip.py  test_kcore_multi.py  test_shell.py  test_shellstruct.py
src/csk/src/algs/: auf.py  common.py  rmq.py
src/csk/src/cli/: kcore.py  run_shell_baseline.py  run_shell_compressed.py
src/csk/src/csk/: __init__.py  multi.py  shell.py  shell_baseline.py  shell_profile.py
src/csk/src/csk/algs/: baseline.py  common.py  multi.py  shell.py  shell_baseline.py  steiner.py
src/csk/src/csk/cli/: common.py  compact.py  coreness.py  kcore.py  run_baseline.py  run_shell_baseline.py  run_shell_compressed.py  run_steiner.py
src/csk/src/csk/ds/: common.py  maxheap.py  rmq.py
src/csk/tests/: common.py  test_kcore_multi.py  test_multi.py  test_shell.py  test_shell_baseline.py
(+48 files in other folders)
