[project]
name = "csk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ian Chen", email = "ianchensoftware@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "networkit>=11.2.1",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "scipy>=1.17.1",
]

[project.scripts]
csk = "csk.cli.kcore:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
